wp-content/themes/delivering-happiness/assets/sass/pages/_service-request.scss
.service-request{
	.one-column{
		@include clearfix();
		width: 100%;
	}
	em{
		font-style: italic;
	}	
	.hero{
		.wrapper{
			@include bg-img(service-request-hero, jpg, no-repeat, center, top);
			@include clearfix();
			height: 434px;
			position: relative;
			background-size: cover;
		}
		.copy{
			float: right;
			padding-top: 91px;
			padding-right: 63px;
		}
		h2 {
		    @include text-shadow(rgba(black, 0.3) 1px 1px 0);
		    @include font-shorthand(54px, normal, 63px);
		    color: $White;
		    letter-spacing: 0;
		}
	}
	.two-column{
		.left-col{
			height: 840px;
			padding-top: 25px;
			padding-left: 55px;
			p{
				@include font-shorthand(14px, normal, 19px);
				color: $text-color5;
				font-style: normal;
				margin-bottom: 12px;
			}
			ul{
				margin-left: 17px;
				margin-bottom: 14px;
				li{
					@include font-shorthand(14px, normal, 15px);
					list-style-type: disc;
					list-style-position: inside;
					color: $text-color5;
					sup{
						top: -3px;
					}
				}
			}
			h3{
				@include font-shorthand(21px, normal, 26px);
				color: $Blue;
				letter-spacing: -0.004em;
				margin-bottom: 11px;
				padding-top: 22px;
			}
		}
		.right-col{
			padding-top: 51px;
			padding-left: 61px;
			height: auto;
		}
	}

	.service-form{
		@include size(469px, auto);
		background-color: $Blue;
		color: $White;
		display: block;
		padding: 24px;
		h3{
			@include bg-img(form-heading, png, no-repeat, center, top);
			@include size(291px, 24px);
			background-size: cover;
			display: block;
			margin: 5px auto 0;
			font-size: 25px;
			margin-bottom: 27px;
		}
		label{
			color: $White;
		}
	}
	&.post-event{
		.hero{
			.wrapper{
				@include bg-img(post-event-hero, jpg, no-repeat, center, top);
			}
			h2 {
			    @include font-shorthand(64px, normal, 77px);
			}
			.copy{
				padding-top: 124px;
				padding-right: 83px;
			}
		}
		.grab-btn-icon{
			@include size(38px, 38px);
			@include bg-img(grab-btn-icon, jpg, no-repeat, center, top);
			background-size: cover;
			display: inline-block;
			margin-top: -10px;
			vertical-align: middle;
			margin-left: 21px;
		}
		
		.two-column{
			.left-col{
				padding-top: 50px;
				height: 659px;
				p{
					@include font-shorthand(17px, normal, 19px);
					margin-bottom: 22px;
					&.inspired-text{
						text-align: center;
						margin-top: -6px;
						margin-bottom: 14px;
					}
				}
				a{
					color: $Blue;
				}
				.button{
					@include size(530px, 73px);
					padding: 0;
					background-color: $Black;
					color: $White;
					@include font-shorthand(19px, 600, 73px);
					margin-top: 19px;
					visibility: middle;
				}
			}
			.right-col{
				.service-form{
					h3{
						@include size(auto, auto);
						background: none;
						text-align: center;
					}
				}	
			}
			
		}
	}
}

